add missing parameter to network train function

--- a/Counting Dimensions.ipynb
+++ b/Counting Dimensions.ipynb
@@ -81,16 +81,19 @@
     "                                    min_epochs=1000,\n",
     "                                    max_epochs=2000,\n",
     "                                    epochs_at_a_time=100,\n",
-    "                                    learning_rate=0.001):\n",
+    "                                    learning_rate=0.001,\n",
+    "                                   classifier=None): # if no classifier is given it will simply train up for max_epochs epochs\n",
     "    accuracy = 0\n",
     "    total_epochs = 0\n",
     "    while (accuracy < 1 or total_epochs < min_epochs) and (total_epochs <max_epochs):\n",
     "        rnn.train_group(words,epochs_at_a_time,show=True,loss_every=20,\n",
     "                       learning_rate=learning_rate, print_time=False)\n",
     "        total_epochs += epochs_at_a_time\n",
-    "        accuracy = compare_network_to_classifier(rnn, classifier, words)\n",
+    "        if not None is classifier:\n",
+    "            accuracy = compare_network_to_classifier(rnn, classifier, words)\n",
+    "            print(\"\\t\\tcurrent accuracy: [[\",int(100*digits*accuracy)/digits,\" %]]\")\n",
     "        digits=pow(10,3)\n",
-    "        print(\"\\t\\tcurrent accuracy: [[\",int(100*digits*accuracy)/digits,\" %]]\")\n",
+    "\n",
     "        \n",
     "# example use:\n",
     "# rnn = RNNTokenPredictor(your_alphabet)\n",
@@ -99,7 +102,7 @@
     "# #     RNNClass (default LSTMNetwork, can also be GRUNetwork),\n",
     "# #     reject_threshold\n",
     "# words = [\"a\"*n+\"b\"*n for n in range(100)] #positive examples for anbn language\n",
-    "# train_network_on_positive_words(rnn,words) \n",
+    "# train_network_on_positive_words(rnn,words,classifier=anbn) \n",
     "# #      has optional parameters as seen in function definition at top of this cell"
    ]
   },
